# oidc-discovery

./: .gitignore  Containerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yaml
keycloak/: Containerfile  export-realm.sh
keycloak/import/: realm-export.json
src/ee_oidc_discovery/: __init__.py  models.py
src/oidc_discovery/: clients.py  models.py
tests/: test_clients.py
