[project]
name = "ee-oidc-discovery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Youri Westerman", email = "y.westerman@amsterdam.nl" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13.4",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "ty>=0.0.55",
]
