[project]
name = "oidc-discovery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Youri Westerman", email = "y.westerman@amsterdam.nl" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.28.1",
    "pydantic>=2.13.4",
]

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "anyio>=4.14.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "ty>=0.0.55",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    "D204",
    "D205",
    "FIX002",
    "TD002",
    "TD003",
    "S101",
    "UP045",
]
